--- a/public_html/juegoPhaser.html
+++ b/public_html/juegoPhaser.html
@@ -36,6 +36,9 @@ and open the template in the editor.
         <script src="js/objects/PlayerCharacter.js"></script>
         <script src="js/objects/AI_List.js"></script>
         <script src="js/objects/Enemy.js"></script>
+        <script src="js/Enemigos/Bosses/common.js"></script>
+        <script src="js/Enemigos/Bosses/MegaSlime.js"></script>
+        <script src="js/Enemigos/Bosses/Ninja.js"></script>
         <script src="js/Enemigos/Goon.js"></script>
         <script src="js/Enemigos/Soldado.js"></script>
         <script src="js/Enemigos/Lanzacohetes.js"></script>
@@ -48,6 +51,7 @@ and open the template in the editor.
         <script src="js/objects/PlataformasEspeciales.js"></script>
         <script src="js/objects/cargarMapa.js"></script>
         <script src="js/Player/Player.js"></script>
+        <script src="js/Player/Construcciones.js"></script>
         <script src="js/Player/cargarControlesJugador.js"></script>
         <script src="js/carga.js"></script>
     </head>
