--- a/public_html/login.html
+++ b/public_html/login.html
@@ -9,6 +9,7 @@ and open the template in the editor.
         <title>Pagina de login</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <script src="js/jquery-1.12.4.js"></script>
         <script src="js/Formularios/Comprobaciones.js"></script>
         <link rel="stylesheet" href="css/form.css" />
     </head>
