--- a/public_html/opciones.html
+++ b/public_html/opciones.html
@@ -9,7 +9,58 @@ and open the template in the editor.
         <title>TODO supply a title</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <script src="js/jquery-1.12.4.js"></script>
         <script>
+            // Cargar los listeners
+            $('document').ready(function(){
+                var $listaBotones = $('#setupsDificultad').children();
+                $listaBotones.each(function(e){
+                    $listaBotones.eq(e).on('click',function(){
+                        switch(e){
+                            case 0:
+                                $('#handicap').val(0);
+                                $('#MBI').val(999);
+                                $('#MBM').val(999);
+                                $('#MEI').val(999);
+                                $('#MEM').val(999);
+                                $('#MNI').val(999);
+                                $('#MNM').val(999);
+                                $('#TPB').val(600);
+                                break;
+                            case 1:
+                                $('#handicap').val(1);
+                                $('#MBI').val(250);
+                                $('#MBM').val(500);
+                                $('#MEI').val(15);
+                                $('#MEM').val(50);
+                                $('#MNI').val(25);
+                                $('#MNM').val(100);
+                                $('#TPB').val(180);
+                                break;
+                            case 2:
+                                $('#handicap').val(3);
+                                $('#MBI').val(80);
+                                $('#MBM').val(300);
+                                $('#MEI').val(15);
+                                $('#MEM').val(30);
+                                $('#MNI').val(25);
+                                $('#MNM').val(90);
+                                $('#TPB').val(120);
+                                break;
+                            case 3:
+                                $('#handicap').val(10);
+                                $('#MBI').val(80);
+                                $('#MBM').val(300);
+                                $('#MEI').val(15);
+                                $('#MEM').val(30);
+                                $('#MNI').val(25);
+                                $('#MNM').val(90);
+                                $('#TPB').val(60);
+                                break;
+                        }
+                    });
+                })
+            });
             function crearNodo(tipo, texto, atributos, valores) {
                 var nodoTexto;
                 var nodoP = document.createElement(tipo);
@@ -32,31 +83,41 @@ and open the template in the editor.
             }
             function cargarCampos() {
                 var cuentaActual = JSON.parse(localStorage.getItem('CuentaActual'));
-                document.getElementById('handicap').value = cuentaActual.dificultad;
-                document.getElementById('MBI').value = cuentaActual.inicialMunicionBalas;
-                document.getElementById('MBM').value = cuentaActual.maximoMunicionBalas;
-                document.getElementById('MEI').value = cuentaActual.inicialMunicionExplosiva;
-                document.getElementById('MEM').value = cuentaActual.maximoMunicionExplosiva;
-                document.getElementById('MNI').value = cuentaActual.inicialMunicionEnergia;
-                document.getElementById('MNM').value = cuentaActual.maximoMunicionEnergia;
-                document.getElementById('TPB').value = cuentaActual.tiempoParaElBoss;
-                if(cuentaActual.hayBoss){
-                    document.getElementById('HB').checked = true;
+                $('#handicap').val(cuentaActual.dificultad);
+                $('#MBI').val(cuentaActual.inicialMunicionBalas);
+                $('#MBM').val(cuentaActual.maximoMunicionBalas);
+                $('#MEI').val(cuentaActual.inicialMunicionExplosiva);
+                $('#MEM').val(cuentaActual.maximoMunicionExplosiva);
+                $('#MNI').val(cuentaActual.inicialMunicionEnergia);
+                $('#MNM').val(cuentaActual.maximoMunicionEnergia);
+                $('#TPB').val(cuentaActual.tiempoParaElBoss);
+                //document.getElementById('handicap').value = cuentaActual.dificultad;
+                //document.getElementById('MBI').value = cuentaActual.inicialMunicionBalas;
+                //document.getElementById('MBM').value = cuentaActual.maximoMunicionBalas;
+                //document.getElementById('MEI').value = cuentaActual.inicialMunicionExplosiva;
+                //document.getElementById('MEM').value = cuentaActual.maximoMunicionExplosiva;
+                //document.getElementById('MNI').value = cuentaActual.inicialMunicionEnergia;
+                //document.getElementById('MNM').value = cuentaActual.maximoMunicionEnergia;
+                //document.getElementById('TPB').value = cuentaActual.tiempoParaElBoss;
+                if (cuentaActual.hayBoss) {
+                    $('#HB').prop('checked', true);
                 }
-                document.getElementById('skin').value = cuentaActual.skin;
-                document.getElementById('mapa').value = cuentaActual.mapa;
+                $('#skin').val(cuentaActual.skin);
+                $('#mapa').val(cuentaActual.mapa);
+                //document.getElementById('skin').value = cuentaActual.skin;
+                //document.getElementById('mapa').value = cuentaActual.mapa;
 
                 var todasCuentas = JSON.parse(localStorage.getItem('Cuentas'));
                 var tituloRecords = crearNodo("DIV", null, ["class"], ["tituloRecord"]);
                 tituloRecords.appendChild(crearNodo("DIV", "PJ", ["class"], ["inforecord"]));
                 tituloRecords.appendChild(crearNodo("DIV", "Nombre", ["class"], ["inforecord"]));
                 tituloRecords.appendChild(crearNodo("DIV", "Puntos", ["class"], ["inforecord"]));
-                tituloRecords.appendChild(crearNodo("DIV", "Hand", ["class"], ["inforecord"]));
+                tituloRecords.appendChild(crearNodo("DIV", "Handicap", ["class"], ["inforecord"]));
                 document.getElementById('recordsDeCuentas').appendChild(tituloRecords);
                 todasCuentas.sort(compare);
                 for (var item in todasCuentas) {
                     var nuevoNodo = crearNodo("DIV", null, ["class"], ["record"]);
-                    var img = crearNodo("IMG", null, ["class","width","height","src","title"], ["recordImg",32,32,"img/"+todasCuentas[item].personajeRecord+".png",todasCuentas[item].personajeRecord]);
+                    var img = crearNodo("IMG", null, ["class", "width", "height", "src", "title"], ["recordImg", 32, 32, "img/" + todasCuentas[item].personajeRecord + ".png", todasCuentas[item].personajeRecord]);
                     var midimg = crearNodo("DIV", null, ["class"], ["inforecord"]);
                     midimg.appendChild(img);
                     nuevoNodo.appendChild(midimg);
@@ -69,8 +130,8 @@ and open the template in the editor.
                 actualizarInformacionPersonaje();
             }
             function rellenarCuenta(cuentaActual) {
-                var MI = parseInt(document.getElementById('MBI').value);
-                var MM = parseInt(document.getElementById('MBM').value);
+                var MI = parseInt($('#MBI').val());
+                var MM = parseInt($('#MBM').val());
                 if (MM > 999) {
                     MM = 999;
                 }
@@ -80,8 +141,8 @@ and open the template in the editor.
                 cuentaActual.inicialMunicionBalas = (MI < 0) ? 0 : MI;
                 cuentaActual.maximoMunicionBalas = (MM < 0) ? 0 : MM;
 
-                MI = parseInt(document.getElementById('MEI').value);
-                MM = parseInt(document.getElementById('MEM').value);
+                MI = parseInt($('#MEI').val());
+                MM = parseInt($('#MEM').val());
                 if (MM > 999) {
                     MM = 999;
                 }
@@ -91,8 +152,8 @@ and open the template in the editor.
                 cuentaActual.inicialMunicionExplosiva = (MI < 0) ? 0 : MI;
                 cuentaActual.maximoMunicionExplosiva = (MM < 0) ? 0 : MM;
 
-                MI = parseInt(document.getElementById('MNI').value);
-                MM = parseInt(document.getElementById('MNM').value);
+                MI = parseInt($('#MNI').val());
+                MM = parseInt($('#MNM').val());
                 if (MM > 999) {
                     MM = 999;
                 }
@@ -102,23 +163,21 @@ and open the template in the editor.
                 cuentaActual.inicialMunicionEnergia = (MI < 0) ? 0 : MI;
                 cuentaActual.maximoMunicionEnergia = (MM < 0) ? 0 : MM;
 
-                cuentaActual.mapa = document.getElementById('mapa').value;
-                cuentaActual.skin = document.getElementById('skin').value;
-                cuentaActual.dificultad = parseInt(document.getElementById('handicap').value);
-                if(document.getElementById('HB').checked){
-                    cuentaActual.tiempoParaElBoss = parseInt(document.getElementById('TPB').value);
+                cuentaActual.mapa = $('#mapa').val();
+                cuentaActual.skin = $('#skin').val();
+                cuentaActual.dificultad = parseInt($('#handicap').val());
+                cuentaActual.tiempoParaElBoss = parseInt($('#TPB').val());
+                console.log($('#HB').prop('checked'));
+                if ($('#HB').prop('checked')) {
                     cuentaActual.hayBoss = true;
                 } else {
-                    cuentaActual.tiempoParaElBoss = parseInt(document.getElementById('TPB').value);
                     cuentaActual.hayBoss = false;
                 }
-
                 return cuentaActual;
             }
             function finalizarFormulario() {
                 var cuentaActual = JSON.parse(localStorage.getItem('CuentaActual'));
                 cuentaActual = rellenarCuenta(cuentaActual);
-
 
                 // Guardamos esto aquí y en la lista de cuentas de una.
                 localStorage.setItem('CuentaActual', JSON.stringify(cuentaActual));
@@ -136,17 +195,23 @@ and open the template in the editor.
                 localStorage.setItem('CuentaActual', null);
                 location.replace('login.html');
             }
-            
-            function actualizarInformacionPersonaje(){
+
+            function actualizarInformacionPersonaje() {
                 var informacionPersonaje = document.getElementById('informacionPersonaje');
-                while(informacionPersonaje.firstChild){
+                while (informacionPersonaje.firstChild) {
                     informacionPersonaje.removeChild(informacionPersonaje.firstChild);
                 }
                 var personajeElegido = document.getElementById('skin').value;
-                switch(personajeElegido){
-                    case "Security": informacionPersonaje.appendChild(document.createTextNode("Salta con una mochila cohete con el jefe de seguridad"));break;
-                    case "TimeTrooper": informacionPersonaje.appendChild(document.createTextNode("Viaja atrás en el tiempo y usa estrategias de posicionamiento"));break;
-                    case "Engineer": informacionPersonaje.appendChild(document.createTextNode("Despliega construcciones y juega de manera táctica"));break;
+                switch (personajeElegido) {
+                    case "Security":
+                        informacionPersonaje.appendChild(document.createTextNode("Salta con una mochila cohete con el jefe de seguridad"));
+                        break;
+                    case "TimeTrooper":
+                        informacionPersonaje.appendChild(document.createTextNode("Viaja atrás en el tiempo y usa estrategias de posicionamiento"));
+                        break;
+                    case "Engineer":
+                        informacionPersonaje.appendChild(document.createTextNode("Despliega construcciones y juega de manera táctica"));
+                        break;
                 }
             }
 
@@ -184,6 +249,12 @@ and open the template in the editor.
                 <label>¿Hay Boss?<input type="checkbox" id="HB"></label>
                 <p id="informacionPersonaje"></p>
                 <button onclick="finalizarFormulario()" type="button">¡INICIAR!</button>
+                <div id="setupsDificultad">
+                    <button>Fácil</button>
+                    <button>Normal</button>
+                    <button>Difícil</button>
+                    <button>AIEE</button>
+                </div>
             </div>
             <div id="recordsDeCuentas">
                 <h1 style="text-align:center;margin-bottom:10px">Puntuaciones</h1>
@@ -200,7 +271,7 @@ and open the template in the editor.
                     Tecla Shift izquierdo = Esquivar
                 </p>
                 <p>
-                    Tecla C = Mochila cohete vertical
+                    Tecla C = Habilidad especial del personaje
                 </p>
                 <p>
                     Flechas izquierda y derecha = Moverse a esa dirección
