--- a/public_html/registro.html
+++ b/public_html/registro.html
@@ -14,6 +14,7 @@ Claves a usar:
         <title>TODO supply a title</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <script src="js/jquery-1.12.4.js"></script>
         <script src="js/Formularios/Comprobaciones.js"></script>
         <link rel="stylesheet" href="css/form.css" />
     </head>
