--- a/public_html/juegoPhaser.html
+++ b/public_html/juegoPhaser.html
@@ -39,6 +39,7 @@ and open the template in the editor.
         <script src="js/Enemigos/Bosses/common.js"></script>
         <script src="js/Enemigos/Bosses/MegaSlime.js"></script>
         <script src="js/Enemigos/Bosses/Ninja.js"></script>
+        <script src="js/Enemigos/Bosses/MetalWizard.js"></script>
         <script src="js/Enemigos/Goon.js"></script>
         <script src="js/Enemigos/Soldado.js"></script>
         <script src="js/Enemigos/Lanzacohetes.js"></script>
