--- a/public_html/opciones.html
+++ b/public_html/opciones.html
@@ -204,13 +204,16 @@ and open the template in the editor.
                 var personajeElegido = document.getElementById('skin').value;
                 switch (personajeElegido) {
                     case "Security":
-                        informacionPersonaje.appendChild(document.createTextNode("Salta con una mochila cohete con el jefe de seguridad"));
+                        informacionPersonaje.appendChild(document.createTextNode("Salta con una mochila cohete con el jefe de seguridad, no le pagan lo suficiente para esto"));
                         break;
                     case "TimeTrooper":
-                        informacionPersonaje.appendChild(document.createTextNode("Viaja atrás en el tiempo y usa estrategias de posicionamiento"));
+                        informacionPersonaje.appendChild(document.createTextNode("Viaja atrás en el tiempo y usa estrategias de posicionamiento con el misterioso cyborg venido del futuro"));
                         break;
                     case "Engineer":
-                        informacionPersonaje.appendChild(document.createTextNode("Despliega construcciones y juega de manera táctica"));
+                        informacionPersonaje.appendChild(document.createTextNode("Despliega construcciones y juega de manera táctica con la valiente ingeniera de la estación espacial 13"));
+                        break;
+                    case "Pirate":
+                        informacionPersonaje.appendChild(document.createTextNode("¡Es la hora de volverse ágil! La pirata tiene menos enfriamiento en su habilidad de esquivar especial"));
                         break;
                 }
             }
@@ -228,6 +231,7 @@ and open the template in the editor.
                         <option value="Security">Security</option>
                         <option value="TimeTrooper">TimeTrooper</option>
                         <option value="Engineer">Engineer</option>
+                        <option value="Pirate">Pirate</option>
                     </select>
                 </label>
                 <label>Handicap<input type="number" id="handicap"></label>
