balanceo y detalles chiquitos

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -53,6 +53,7 @@ DESCOMENTAR PARA TESTING
         <title>Intro</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="shortcut icon" href="assets/favicon.ico" />
         <style>
             @font-face {
                 font-family: "pressStart";
