--- a/public_html/login.html
+++ b/public_html/login.html
@@ -12,6 +12,7 @@ and open the template in the editor.
         <script src="js/jquery-1.12.4.js"></script>
         <script src="js/Formularios/Comprobaciones.js"></script>
         <link rel="stylesheet" href="css/form.css" />
+        <link rel="shortcut icon" href="assets/favicon.ico" />
     </head>
     <body  onload="cargarListeners()">
         <form>
