--- a/public_html/registro.html
+++ b/public_html/registro.html
@@ -16,6 +16,7 @@ Claves a usar:
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="js/jquery-1.12.4.js"></script>
         <script src="js/Formularios/Comprobaciones.js"></script>
+        <link rel="shortcut icon" href="assets/favicon.ico" />
         <link rel="stylesheet" href="css/form.css" />
     </head>
     <body onload="cargarListeners()">
