--- a/public_html/juegoPhaser.html
+++ b/public_html/juegoPhaser.html
@@ -55,6 +55,7 @@ and open the template in the editor.
         <script src="js/Player/Construcciones.js"></script>
         <script src="js/Player/cargarControlesJugador.js"></script>
         <script src="js/carga.js"></script>
+        <link rel="shortcut icon" href="assets/favicon.ico" />
     </head>
     <body>
         <div></div>
