--- a/public_html/opciones.html
+++ b/public_html/opciones.html
@@ -215,6 +215,9 @@ and open the template in the editor.
                     case "Pirate":
                         informacionPersonaje.appendChild(document.createTextNode("¡Es la hora de volverse ágil! La pirata tiene menos enfriamiento en su habilidad de esquivar especial"));
                         break;
+                    case "Riot":
+                        informacionPersonaje.appendChild(document.createTextNode("Experto en defenderse, maestro en darle de ostias a los estudiantes, pero ahora tiene que hacer su trabajo, ¡El antidisturbios viene listo junto con su escudo!"));
+                        break;
                 }
             }
 
@@ -232,6 +235,7 @@ and open the template in the editor.
                         <option value="TimeTrooper">TimeTrooper</option>
                         <option value="Engineer">Engineer</option>
                         <option value="Pirate">Pirate</option>
+                        <option value="Riot">Riot</option>
                     </select>
                 </label>
                 <label>Handicap<input type="number" id="handicap"></label>
