--- a/public_html/registro.html
+++ b/public_html/registro.html
@@ -23,8 +23,8 @@ Claves a usar:
         <form>
             <fieldset>
                 <legend>Registro</legend>
-                <label>Nuevo usuario<input type="text" id="name" pattern="^[A-Za-z]+$"></label><br>
-                <label>Nueva contraseña<input type="password" id="pass"  pattern="^[A-Za-z]+$"></label><br>
+                <label>Nuevo usuario<input type="text" required id="name" pattern="^[A-Za-z]+$"></label><br>
+                <label>Nueva contraseña<input type="password" required id="pass"  pattern="^[A-Za-z]+$"></label><br>
                 <button onclick="nuevaCuenta()" type="button" id="botonSubmit">Registrar nueva cuenta</button><br>
                 <a href="login.html">Volver a la página de login</a><br>
                 <p id="cajitaInfo"></p>
